--- a/Frontend/app/src/main/res/layout/activity_play.xml
+++ b/Frontend/app/src/main/res/layout/activity_play.xml
@@ -1,140 +1,6 @@
+<?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
-
-    <GridLayout
-        android:id="@+id/gridLayout"
-        android:layout_width="392dp"
-        android:layout_height="516dp"
-        android:background="@drawable/greyblock"
-        android:columnCount="3"
-        android:rowCount="3"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent">
-
-        <!-- Your ImageViews go here -->
-        <!-- Make sure to copy this ImageView block 9 times to fill the grid -->
-
-        <ImageView
-            android:id="@+id/whiteshape1"
-            android:layout_width="100dp"
-            android:layout_height="120dp"
-            android:layout_marginStart="8dp"
-            android:layout_marginEnd="8dp"
-            android:layout_row="0"
-            android:layout_column="0"
-            android:layout_rowWeight="1"
-            android:layout_columnWeight="1"
-            android:layout_gravity="fill"
-            android:src="@drawable/whiteshape"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
-        <ImageView
-            android:id="@+id/whiteshape2"
-            android:layout_width="100dp"
-            android:layout_height="120dp"
-            android:layout_marginStart="8dp"
-            android:layout_marginEnd="8dp"
-            android:layout_row="0"
-            android:layout_column="1"
-            android:layout_rowWeight="1"
-            android:layout_columnWeight="1"
-            android:layout_gravity="fill"
-            android:src="@drawable/whiteshape"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
-        <ImageView
-            android:id="@+id/whiteshape3"
-            android:layout_width="100dp"
-            android:layout_height="120dp"
-            android:layout_marginStart="8dp"
-            android:layout_marginEnd="8dp"
-            android:layout_row="0"
-            android:layout_column="2"
-            android:layout_rowWeight="1"
-            android:layout_columnWeight="1"
-            android:layout_gravity="fill"
-            android:src="@drawable/whiteshape"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
-        <ImageView
-            android:id="@+id/whiteshape4"
-            android:layout_width="100dp"
-            android:layout_height="120dp"
-            android:layout_row="1"
-            android:layout_column="0"
-            android:layout_rowWeight="1"
-            android:layout_columnWeight="1"
-            android:layout_gravity="fill"
-            android:src="@drawable/whiteshape"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
-        <ImageView
-        android:id="@+id/whiteshape5"
-            android:layout_width="100dp"
-        android:layout_height="120dp"
-        android:layout_row="1"
-        android:layout_column="1"
-        android:layout_rowWeight="1"
-        android:layout_columnWeight="1"
-        android:layout_gravity="fill"
-        android:src="@drawable/whiteshape"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
-        <ImageView
-            android:id="@+id/whiteshape6"
-            android:layout_width="100dp"
-            android:layout_height="120dp"
-            android:layout_row="1"
-            android:layout_column="2"
-            android:layout_rowWeight="1"
-            android:layout_columnWeight="1"
-            android:layout_gravity="fill"
-            android:src="@drawable/whiteshape"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
-        <ImageView
-        android:id="@+id/whiteshape7"
-        android:layout_width="100dp"
-        android:layout_height="120dp"
-        android:layout_row="2"
-        android:layout_column="0"
-        android:layout_rowWeight="1"
-        android:layout_columnWeight="1"
-        android:layout_gravity="fill"
-        android:src="@drawable/whiteshape"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
-        <ImageView
-        android:id="@+id/whiteshape8"
-        android:layout_width="100dp"
-        android:layout_height="120dp"
-        android:layout_row="2"
-        android:layout_column="1"
-        android:layout_rowWeight="1"
-        android:layout_columnWeight="1"
-        android:layout_gravity="fill"
-        android:src="@drawable/whiteshape"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
-        <ImageView
-        android:id="@+id/whiteshape9"
-        android:layout_width="100dp"
-        android:layout_height="120dp"
-        android:layout_row="2"
-        android:layout_column="2"
-        android:layout_rowWeight="1"
-        android:layout_columnWeight="1"
-        android:layout_gravity="fill"
-        android:src="@drawable/whiteshape"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
-
-    </GridLayout>
-
 
 </androidx.constraintlayout.widget.ConstraintLayout>
